@@ -1,26 +1,19 @@
 package org.example;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.util.HashMap;
 import java.util.Map;
 import org.json.JSONObject;
 
 public class ConfigReader {
-	private final File configFile;
 
-	public ConfigReader(String path) {
-		configFile = new File(path);
-	}
-
-	public Map<ConfigAttribute, String> read() throws IOException {
-		JSONObject config = getConfigObject();
+	public Map<ConfigAttribute, String> read(InputStream config) throws IOException {
+		JSONObject configObj = getConfigObject(config);
 		Map<ConfigAttribute, String> configMap = new HashMap<>();
-		for (String key : config.keySet()) {
+		for (String key : configObj.keySet()) {
 			ConfigAttribute attribute = ConfigAttribute.fromJsonKey(key);
-			String value = config.get(key).toString();
+			String value = configObj.get(key).toString();
 			if (attribute.valueIsAllowed(value)) {
 				configMap.put(attribute, value);
 			} else {
@@ -31,8 +24,8 @@ public class ConfigReader {
 		return configMap;
 	}
 
-	private JSONObject getConfigObject() throws IOException {
-		String content = new String(Files.readAllBytes(Paths.get(configFile.toURI())));
+	private JSONObject getConfigObject(InputStream config) throws IOException {
+		String content = new String(config.readAllBytes());
 		return new JSONObject(content);
 	}
 }
